--- a/basicappmvp/app/build.gradle
+++ b/basicappmvp/app/build.gradle
@@ -34,10 +34,16 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.android.support:support-annotations:24.2.0'
     compile 'com.google.dagger:dagger:2.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+
     annotationProcessor 'com.google.dagger:dagger-compiler:2.0'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    compile 'com.j256.ormlite:ormlite-android:4.48'
 
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.1'
 
