--- a/basicappmvp/app/src/main/AndroidManifest.xml
+++ b/basicappmvp/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MData.MDataActivity" />
+        <activity android:name=".Slideshow.SlideshowActivity"></activity>
     </application>
 
 </manifest>
